# Sally

./: .gitignore
DataLayer/: .gitignore  ALPHA_ENGINE_USER_MANUAL.md  Data_Design_Specification.docx  MONTH_2_HANDBOOK.md  README.md  TECH_DEBT.md  USER_MANUAL.md  docker-compose.yml  pyproject.toml  requirements.txt
DataLayer/quantamental/alpha/: __init__.py  backtest.py  diagnostics.py  features.py  performance.py  portfolio.py  ranking.py  reporting.py
DataLayer/quantamental/config/: .env.example  settings.py  signals_registry.yaml  universe.py
DataLayer/quantamental/dashboard/: _bootstrap.py  app.py  data.py  freshness.py  panels.py  ui.py
DataLayer/quantamental/data/: quality.py
DataLayer/quantamental/data/ingest/: fred_client.py  polygon_client.py  polygon_fundamentals.py  questdb_connection.py  questdb_readers.py  questdb_schema.py  questdb_writer.py  questdb_writes.py  yfinance_fundamentals.py
DataLayer/quantamental/portfolio/: journal.py  stoploss.py  tracker.py
DataLayer/quantamental/research/: universe_builder.py
DataLayer/quantamental/scripts/: _bootstrap.py  alpha_performance.py  backfill.py  backfill_fundamentals.py  backtest_alpha.py  build_universe.py  check_data.py  daily_pipeline.py  diagnose_alpha.py  import_earnings_events.py  import_earnings_events_csv.py  log_api_pricing.py  log_capex.py  log_earnings_event.py  log_tsmc_revenue.py  manage_candidates.py  run_alpha.py
DataLayer/quantamental/signals/: aggregator.py  earnings.py  earnings_importer.py  macro.py  registry.py  sector.py  sector_ai_infra.py  stock.py
DataLayer/quantamental/tests/: test_alpha_engine.py  test_calendar.py  test_candidate_management.py  test_dashboard_freshness.py  test_earnings_importer.py  test_hardening.py  test_pipeline_retry.py  test_portfolio.py  test_questdb.py  test_sector.py  test_signals.py  test_stock_signals.py  test_stoploss.py  test_universe_builder.py
ProjectFIles/: 4. Full Watch List.md  Month_2_Design_Specification.md  Quantamental_AI_Infra_Project_Document.docx  ai_token_economy_us_stock_watchlist_2026-04-26.md
