[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantamental-data-layer"
version = "0.1.0"
description = "Local quantamental market data, signal, portfolio, and dashboard system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polygon-api-client>=1.14.0",
    "fredapi>=0.5.2",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "streamlit>=1.32.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "requests>=2.31.0",
    "pandas-market-calendars>=4.0.0",
    "streamlit-autorefresh>=1.0.1",
    "lxml>=4.9.0",
    "vectorbt>=0.26.0",
    "ta>=0.11.0",
    "scipy>=1.12.0",
    "duckdb>=0.10.0",
    "pyarrow>=15.0.0",
    "yfinance>=0.2.40",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
quantamental-pipeline = "quantamental.scripts.daily_pipeline:main"
quantamental-check-data = "quantamental.scripts.check_data:main"
quantamental-build-universe = "quantamental.scripts.build_universe:main"
quantamental-manage-candidates = "quantamental.scripts.manage_candidates:main"
quantamental-run-alpha = "quantamental.scripts.run_alpha:main"
quantamental-backtest-alpha = "quantamental.scripts.backtest_alpha:main"
quantamental-alpha-performance = "quantamental.scripts.alpha_performance:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "quantamental*",
]

[tool.setuptools.package-data]
"quantamental.config" = ["*.yaml", ".env.example"]

[tool.pytest.ini_options]
testpaths = ["quantamental/tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "quantamental/data/parquet",
    "quantamental/logs",
]
